<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_35sdp"
    android:layout_marginRight="@dimen/_35sdp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvlogout"
                android:layout_marginTop="@dimen/_5sdp"
                style="@style/text_primaryheadingmedium"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/PrimarytextColor"
                android:text="@string/add_task"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btncancel"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/chip_background"
                    android:backgroundTint="@color/Graybg"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/secondarytextColor"
                    android:textSize="@dimen/_8sdp"
                    style="@style/text_primaryheadingmediumwhite"/>
                <Button
                    android:id="@+id/btnok"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_25sdp"
                    android:background="@drawable/chip_background"
                    android:backgroundTint="@color/PrimaryGreenwColor"
                    android:text="@string/ok"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_8sdp"
                    style="@style/text_primaryheadingmediumwhite"/>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>