<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_5sdp">

            <LinearLayout
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="15dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tvtitle"
                        style="@style/text_secondaryregularwhite"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/lbl_nointernet_title"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/_5sdp">

                    <TextView
                        android:id="@+id/tvdetails"
                        style="@style/text_primaryheadingmedium"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/lbl_nointernet_details"
                        android:textColor="@color/PrimarytextColor"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnno"
                            style="@style/text_primaryheadingmediumwhite"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:background="@drawable/chip_background"
                            android:backgroundTint="@color/Graybg"
                            android:text="@string/lbl_nointernet_btn_no"
                            android:textAllCaps="false"
                            android:textColor="@color/secondarytextColor"
                            android:textSize="@dimen/_8sdp" />

                        <Button
                            android:id="@+id/btnyes"
                            style="@style/text_primaryheadingmediumwhite"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_marginLeft="@dimen/_8sdp"
                            android:background="@drawable/chip_background"
                            android:backgroundTint="@color/PrimaryGreenwColor"
                            android:text="@string/lbl_nointernet_btn_yes"
                            android:textAllCaps="false"
                            android:textSize="@dimen/_8sdp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</layout>